<resources>
    <string name="app_name">CleanArchitecture</string>

    <string name="msg_slogan">The Movie Database</string>

    <string name="msg_loading">Loading data</string>
    <string name="msg_load_data_failed">Loading data failed, please try again!</string>

    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme</string>

    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="login_input_null_or_empty">Username and password is not empty.</string>
    <string name="msg_remember_login">Remember login</string>

    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter keyword</string>
</resources>