<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.cleanarchitecture.ui.login.LoginViewModel" />

        <variable
            name="result"
            type="com.bt.presentation.base.model.Result" />

        <variable
            name="callback"
            type="com.bt.presentation.base.model.RetryCallback" />

        <import type="com.bt.presentation.base.model.Result" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_login_scene">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageLogo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_128"
            android:layout_marginTop="@dimen/dp_32"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_app" />

        <TextView
            android:id="@+id/textSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_slogan"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="@+id/imageLogo"
            app:layout_constraintStart_toStartOf="@+id/imageLogo"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_32"
            android:hint="@string/login_hint_username"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSlogan"
            app:startIconDrawable="@drawable/ic_baseline_perm_identity_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_32"
            android:hint="@string/login_hint_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutUsername"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkboxRememberLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.rememberLogin}"
            android:text="@string/msg_remember_login"
            app:layout_constraintEnd_toEndOf="@+id/layoutPassword"
            app:layout_constraintStart_toStartOf="@+id/layoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="?attr/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:enabled="@{viewModel.enableLogin}"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/layoutPassword"
            app:layout_constraintStart_toStartOf="@+id/layoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/checkboxRememberLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLoginGuest"
            style="?attr/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/guest"
            app:layout_constraintEnd_toEndOf="@+id/layoutPassword"
            app:layout_constraintStart_toStartOf="@+id/layoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textHelper"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:text="Dev env"
            android:textAllCaps="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
